[package]
name = "dioxus-mobile-geolocation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform geolocation for Dioxus mobile and desktop apps (Android, iOS, macOS)"
repository = "https://github.com/DioxusLabs/dioxus"
keywords = ["dioxus", "geolocation", "mobile", "android", "ios", "macos"]
categories = ["gui", "mobile"]

[features]
default = ["location-coarse"]
location-fine = []
location-coarse = []
background-location = []

[dependencies]
permissions = { git = "https://github.com/wheregmis/dioxus.git", branch = "native_api_testing" }
permissions-core = { git = "https://github.com/wheregmis/dioxus.git", branch = "native_api_testing" }
cfg-if = "1.0"
dioxus-platform-bridge = { git = "https://github.com/wheregmis/dioxus.git", branch = "native_api_testing", features = [
    "metadata",
] }
const-serialize = { git = "https://github.com/wheregmis/dioxus.git", branch = "native_api_testing" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.3"
objc2-core-location = { version = "0.3.2", features = [
    "CLLocationManager",
    "CLLocation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-core-location = { version = "0.3.2", features = [
    "CLLocationManager",
    "CLLocation",
] }


# [package.metadata.docs.rs]
# default-target = "x86_64-unknown-linux-gnu"
# targets = ["aarch64-linux-android", "aarch64-apple-ios"]
